--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/GonzaloIbarrola/Social-Links-Profile.git",
+  "homepage": "https://github.com/GonzaloIbarrola/Social-Links-Profile",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
